batch GEO location and labels to graph

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
 
     <div id="svg-container">
         <div>
-            <h1>Aantal toegevoegde parkeerautomaten per jaar</h1>
             <div>
                 <strong>Sorteer op</strong>
                 <button>Jaar</button>
@@ -25,6 +24,7 @@
 
 
 </body>
-<script type="module" src="script/script.js"></script>
+<!-- <script type="module" src="script/script.js"></script> -->
+<script type="module" src="script/modules/reverseGeo.js"></script>
 
 </html>
