--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
 
     <div id="svg-container">
         <div>
-            <div>
+            <!-- <div>
                 <strong>Sorteer op</strong>
                 <button>Jaar</button>
                 <button>Aantal</button>
-            </div>
+            </div> -->
 
         </div>
     </div>
