--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <form>Select a variable to plot </form>
     <div id="svg-container">
         <div>
             <!-- <div>
