--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="loading">
+        <p>Loading</p>
+    </div>
     <form>Select a variable to plot </form>
     <div id="svg-container">
 
