maximale drag toegevoegd

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parkeergroei in de stad</title>
     <link rel="stylesheet" href="style/style.css">
     <script src="https://unpkg.com/d3@6.2.0/dist/d3.js"></script>
 </head>
